# frame-wrangler

./: CLAUDE.md  LICENSE  README.md  evrsort.py  example_chunk.txt  prompt.md  pyproject.toml
.github/workflows/: ci.yml
frame_wrangler/: __init__.py
frame_wrangler/stream/: _worker.py  chunk.py  cli.py  psana_filter.py  stream.py
tests/: _utils.py  conftest.py  test_chunk.py  test_split_stream.py  test_stream.py
