[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "frame-wrangler"
version = "0.1.0"
description = "Tools for manipulating CrystFEL .stream files from serial crystallography."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-cov"]

[project.scripts]
split_stream = "frame_wrangler.stream.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
